-fixed some issues with printing annotations where the list contained annotations. -updated unit tests